2013-11-28  Zoltan Horvath  <zoltan@webkit.org>

        [Win] Update vcxproj.filters, since LineInfo.h and LineLayoutState.h have been moved to rendering/line
        https://bugs.webkit.org/show_bug.cgi?id=124959

        Reviewed by Brent Fulgham.

        Update WebCore.vcxproj.filters, since LineInfo.h (r155628) and LineLayoutState.h (158121) have been moved to rendering/line.

        No new tests, no behavior change.

        * WebCore.vcxproj/WebCore.vcxproj.filters:

2013-11-28  Laszlo Vidacs  <lac@inf.u-szeged.hu>

        RenderTableSection Blink merge asserting
        https://bugs.webkit.org/show_bug.cgi?id=124857

        Reviewed by Csaba Osztrogonác.

        Use border spacing at the end of all sections.

        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::calcRowLogicalHeight):

2013-11-28  Antti Koivisto  <antti@apple.com>

        Remove feature: CSS variables
        https://bugs.webkit.org/show_bug.cgi?id=114119

        Reviewed by Andreas Kling.
        
        The feature is unmaintained and it is getting in the way of refactoring. Code quality is not up to
        WebKit standards either.

        * Configurations/FeatureDefines.xcconfig:
        * GNUmakefile.list.am:
        * WebCore.xcodeproj/project.pbxproj:
        * css/CSSBasicShapes.cpp:
        * css/CSSBasicShapes.h:
        * css/CSSCalculationValue.cpp:
        (WebCore::unitCategory):
        (WebCore::hasDoubleValue):
        (WebCore::CSSCalcPrimitiveValue::toCalcValue):
        (WebCore::CSSCalcPrimitiveValue::computeLengthPx):
        (WebCore::determineCategory):
        (WebCore::CSSCalcBinaryOperation::primitiveType):
        * css/CSSCalculationValue.h:
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::ComputedStyleExtractor::propertyValue):
        * css/CSSGrammar.y.in:
        * css/CSSParser.cpp:
        (WebCore::CSSParserContext::CSSParserContext):
        (WebCore::operator==):
        (WebCore::filterProperties):